kube/vault/consul-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - consul.gilman.io
      secretName: consul-tls
  rules:
    - host: consul.gilman.io
      http:
        paths:
          - path: /
            backend:
              serviceName: consul-ui
              servicePort: 80
          - path: /api
            backend:
              serviceName: consul-server
              servicePort: 8500
