kube/vault/vault-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - secrets.gilman.io
      secretName: secrets-tls
  rules:
    - host: secrets.gilman.io
      http:
        paths:
          - path: /
            backend:
              serviceName: vault
              servicePort: 8200
